@@ -2,6 +2,7 @@ use TestCase::Weaken;
 use TestCase::Minimal;
 use TestCase::Destructor;
 use TestCase::Empty;
+use TestCase::Private;
 
 use TestCase::Template_int_long;
 
@@ -38,11 +39,15 @@ package TestCase {
   has weaken3 : TestCase::Weaken;
   has weaken4 : TestCase::Weaken;
   has minimal : TestCase::Minimal;
-  has private_field : int;
+  has private_field : private int;
   
   jit sub INT_VALUE : int () { return 127; }
   jit sub FLOAT_PRECICE : float () { return 16384.5f; }
   jit sub DOUBLE_PRECICE : double () { return 65536.5; }
+  
+  jit sub get_private_field : int ($self : self) {
+    return $self->{private_field};
+  }
   
   jit sub set_x_int_array : void ($self : self, $x_int_array : int[]) {
     $self->{x_int_array} = $x_int_array;
@@ -464,11 +469,6 @@ package TestCase {
     return 0;
   }
   
-  jit sub private_field : int () {
-    my $test_case = new TestCase;
-    $test_case->{private_field};
-  }
-
   jit sub get_minimal : TestCase::Minimal ($self : self) {
     return $self->{minimal};
   }
