@@ -1,0 +1,5 @@
+package TestCase::Private : private {
+  jit sub new : TestCase::Private () {
+    new TestCase::Private;
+  }
+}
